@@ -22,6 +22,7 @@
 	all : allowed optional args in functions types (?Int -> Void)
 	all : added Reflect.getProperty/setProperty 
 		(partial support : neko, js only so far)
+	all : added --cache, --wait and --cwd
 
 2011-09-25: 2.08
 	js : added js.JQuery
